# MedSegKit

./: .gitignore  README.md  pyproject.toml
brainsegkit/data/: oasis_module.py  transforms.py
brainsegkit/engine/: __init__.py  seg_module.py
brainsegkit/losses/: __init__.py  seg_losses.py
brainsegkit/losses/kd/: feature_kd.py
brainsegkit/models/: __init__.py  registry.py  wrappers.py
configs/: CLAUDE.md  SKILLS.md  dynunet.yaml  dynunet_fsl.yaml  mednext_fsl.yaml  unet.yaml  unet_fsl.yaml  unet_pp.yaml  unet_pp_fsl.yaml
configs/kd/: CLAUDE.md  SKILLS.md  dynunet_to_unet.yaml
experiments/: CLAUDE.md  SKILLS.md  evaluate.py  train.py
medsegkit/: CLAUDE.md  SKILLS.md
medsegkit/engine/: seg_module.py
medsegkit/evaluation/: CLAUDE.md  SKILLS.md  metrics.py
medsegkit/losses/: CLAUDE.md  SKILLS.md
medsegkit/losses/kd/: CLAUDE.md  SKILLS.md
scripts/: brain_viewer.py  convert_dataset.py
