[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "brainsegkit"
version = "0.1.0"
description = "Brain segmentation research framework: UNet/UNet++/DynUNet/MedNeXt/UMamba/SAM + KD"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "monai>=1.4.0",
    "lightning>=2.0.0",
    "nibabel>=5.0.0",
    "SimpleITK>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "pyyaml>=6.0",
    "wandb",
    "torchmetrics>=1.0.0",
]

[project.optional-dependencies]
umamba = ["mamba-ssm", "causal-conv1d"]
sam    = ["segment-anything"]
nnunet = ["nnunetv2"]
all    = ["brainsegkit[umamba,sam,nnunet]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["brainsegkit*"]
